--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,12 @@
         android:id="@+id/note_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="drawable/ic_add_note"
+        android:src="@drawable/ic_launcher_background"
         app:fabSize="normal"
         android:importantForAccessibility="no"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
+        android:layout_margin="16dp"/>
 
-        />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
